@@ -47,9 +47,8 @@
     measurementId: "G-3S0J1PH6R6"
   };
   // Initialize Firebase
-
-  //firebase.initializeApp(testConfig);
-  firebase.initializeApp(firebaseConfig);
+  firebase.initializeApp(testConfig);
+  //firebase.initializeApp(firebaseConfig);
 
   //firebase.analytics();
 
@@ -409,7 +408,7 @@ sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossor
 
 
 </body>
-<footer>Developed by Spencer Douglas (dougla55@purdue.edu) on behalf of Stephen Gould Indianapolis - 2020 - v0.65
+<footer>Developed by Spencer Douglas (dougla55@purdue.edu) on behalf of Stephen Gould Indianapolis - 2020 - v0.7
 	<br><button class = "btn btn-danger tiny-btn" id = "signOutBtn">Sign Out</button>
 </footer>
 </html>
